--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DesignApp</string>
+    <string name="app_name">ImageApp</string>
     <string name="title">დოკუმენტის გასაგზავნად აირჩიე ან\n        გადაუღე სურათი დოკუმენტს</string>
     <string name="upload_image">  სურათის\n ატვირთვა</string>
     <string name="take_image">  სურათის\n გადაღება</string>
