--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title">დოკუმენტის გასაგზავნად აირჩიე ან\n        გადაუღე სურათი დოკუმენტს</string>
     <string name="upload_image">  სურათის\n ატვირთვა</string>
     <string name="take_image">  სურათის\n გადაღება</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
